Saves output to specified folder

--- a/qfls_fitting_batch.ipynb
+++ b/qfls_fitting_batch.ipynb
@@ -69,6 +69,7 @@
    "outputs": [],
    "source": [
     "directory = r'/Volumes/My Passport/macro-nano-degradation/hyperspectral/round2/fresh/processed'\n",
+    "output_directory = r'/Volumes/My Passport/macro-nano-degradation/hyperspectral/round2/fresh/output'\n",
     "filenames = glob.glob(directory + '/*_calibrated.h5')"
    ],
    "metadata": {
@@ -88,7 +89,12 @@
     "    # Plot result\n",
     "    fig, ax = plt.subplots()\n",
     "    visualization.imshow(ax, result['qfls'], vmin=np.nanpercentile(result['qfls'], 1), vmax=np.nanpercentile(result['qfls'], 99), cbar_label='QFLS (eV)')\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    # Save output\n",
+    "    output_filename = filename.replace('/processed', '/output').replace('.h5', '_output.h5')\n",
+    "    with h5py.File(output_filename, 'a') as f:\n",
+    "        for key in result.keys():\n",
+    "            f[f'results/{key}'] = result[key]"
    ],
    "metadata": {
     "collapsed": false
